--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
         <!--Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+        <!--Icon-->
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body style="background-color:rgba(217, 77, 35, 0.79)">
 
    <h1>Card Testing</h1>
+
    <div class="tile">
     <div class="card tile-front">
         <div class="bg-tile m-auto">
